# Sparse-Attention-Zoo

./: .gitignore  LICENSE  README.md  debug.sh  eval_model.py  eval_model.sh  main.py  model.py  pyproject.toml  test_real_generation.py  tokenizer_dataset.sh  train.sh  train_two_stage.sh  visualize_evals.py
configs/: baseline.conf  ddp_config.yaml  default.conf  fsdp_config.yaml  large_experiment.conf  sparse_stage.conf  sparse_stage_non_partial_rope.conf  warmup_stage.conf  warmup_stage_non_partial_rope.conf
datatrove/: tokenize_dataset.py
src/: dataset.py  dsa_llama_model.py  indexer.py  losses.py  token_selection_tracker.py  utils.py
